themes/default-bootstrap/sass/product.scss
@import "compass";
@import "theme_variables";

/* product desc */
/* primary_block ***************************************************************************** */
.primary_block {
	margin-bottom: 40px;
}
.top-hr{
	background: $top-line-color;
	height: 5px;
	margin: 2px 0 31px;
}
.product-heading-h5{
	color: $gray-light;
	font-weight: 200;
	margin: 3px 0 8px;
	font-size: 19px;
	font-family: $font-custom;
}
.box-security .product-heading-h5{
	margin: 3px 0 -8px;
	@media  (max-width: $screen-md-max) { //max 1199px
	margin-bottom: 8px;
	}
}
#productscategory_list .product-name,
.accessories-block .product-name{
	margin-bottom: 5px;
	a{
		font-size: 15px;
		line-height: 18px;
		color: $product-name-color;
		&:hover{
			color: $product-name-hover-color;
		}
	}
}
img{
	max-width: 100%;
	height: auto;
}

/* .pb-left-column ***************************************************************************** */
.pb-left-column {

	#image-block {
		position: relative;
		padding: 5px;
		border: 1px solid $product-image-border;
		background: $light-background;
		@media (max-width: $screen-xs-max) { //max 767px
			width: 280px;
			margin: 0 auto;		
		}	
		img {
			background: $base-box-bg;
			width: 100%;
		}

		#view_full_size {
			display: block;
			cursor: pointer;
			.span_link {
				position: absolute;
				bottom: 20px;
				left: 50%;
				margin-left: -68px;
				display: block;
				padding: 10px 0;	
				text-align: center;
				line-height: 22px;
				color: #777676;
				width: 136px;	
				text-align: center;
				font-weight: 700;
				background: rgba(255,255,255,0.5);
				@include box-shadow(0 2px 8px rgba(0,0,0,0.16));
				&:after{
					font-family: $font-icon;
					color: #c0c0c0;
					font-size: 20px;
					line-height: 22px;
					content: "\f00e";
					font-weight: normal;
					margin: 0 0 0 4px;
				}
				&:hover:after{
					color: $base-text-color
				}
			}
		}
		a.jqzoom {
			div div {
				img {
					width: auto;
					max-width: 10000px;
				}
				.zoomWrapper {
					border: none;	
				}
			}
		}
		.zoomPad {
			z-index : auto!important;
		}
		.new-box,
		.sale-box {
			z-index: 50002
		}
	}
}


/* miniatures */
.pb-left-column #views_block {	
	margin-top: 10px;
	@media (max-width: $screen-xs-max) { //max 767px	
		width: 280px;
		margin: 0 auto;
	}	
}
#thumbs_list {
	overflow: hidden;	
	float: left;
	width: 392px;
	@media (min-width: $screen-md) and (max-width: $screen-md-max) { //min 992px max 1199px
		width: 290px;		
	}
	@media (min-width: $screen-sm) and (max-width: $screen-sm-max) { // min 768px max 991px
		width: 164px;		
	}
	@media (max-width: $screen-xs-max) { //max 767px
		width: 194px;	
	}
	ul#thumbs_list_frame {
		list-style-type: none;
		padding-left: 0;
		overflow: hidden;
		height: 90px;
	}
	li {
		float: left;
		height: 90px;
		width: 90px;
		cursor: pointer;
		border: 1px solid $product-image-border;
		margin-right: 8px;
		line-height: 0;
		@include box-sizing(border-box);
		@media (min-width: $screen-sm) and (max-width: $screen-sm-max) { //min 768px max 991px
			width: 76px;	
			height: 76px;
		}
		&:first-child{
			margin: 0 9px 0 0;
		}
		&.last{
			margin-right: 0;
		}
		a{
			display: block;
			border: 3px solid $light-border-color;
			@include transition(all 0.3s ease);
			@include box-sizing(border-box);
			background: $base-box-bg;
			&:hover, &.shown {
				border-color: $product-image-border;
			}
		}
		img {
			border: 1px solid $light-border-color;
			width: 100%;
			height: 100%;
			@include box-sizing(border-box);
			@media (min-width: $screen-sm) and (max-width: $screen-sm-max) { //min 768px max 991px
				width: 68px;	
				height: 68px;
			}
		}
	}
}
span.view_scroll_spacer {
	float: left;
	width: 39px;
	padding-left: 12px;
	@media (min-width: $screen-sm) and (max-width: $screen-sm-max) { //min 768px max 991px
		padding-left: 6px;
		width: 28px;	
	}	
}
#view_scroll_left,
#view_scroll_right {	
	margin-top: 38px;
	height: 20px;
	width: 20px;
	line-height: 0;
	font-size: 0;
	overflow: hidden;
	@media (min-width: $screen-sm) and (max-width: $screen-sm-max) { //min 768px max 991px
		margin-top: 28px;
	}	
	&:before{
		padding-left: 2px;
		color: $scroll-button-color;
		font-family: $font-icon;
		font-size: 20px;
		line-height: 22px;		
	}
	&:hover:before{
		color: $scroll-button-hover-color;
	}
}
#view_scroll_right {
	float: left;
	&:before{
		content: "\f138";	
	}
}
#view_scroll_left {
	margin-top: 0;
	&:before{
		content: "\f137";
		padding-right: 2px;
	}
}
.resetimg {
	padding: 10px 0 0;
	#resetImages i{
		margin-right: 6px;
	}	
}
.view_scroll_spacer {
	margin-top: 38px;
	@media (min-width: $screen-sm) and (max-width: $screen-sm-max) { //min 768px max 991px
		margin-top: 28px;
	}
}
/* ... */

